i18n/zh-Hans/docusaurus-plugin-content-docs/version-0.1.x/keybindings.md
---
sidebar_position: 4
---

# 键位绑定参考

本页列出了 Gitti 中所有可用的键位绑定，按上下文和场景进行组织。

## 图例

- **`*`** = 全局键位绑定（在没有弹出窗口时，适用于所有上下文）
- **`* [!!]`** = 全局键位绑定，**即使在弹出窗口打开时也有效**

##全局键位绑定

| 键 | 标记 | 操作 | 备注 |
| :--- | :--- | :--- | :--- |
| `ctrl+c` | `* [!!]` | 退出 Gitti | 强制退出，即使在弹出窗口中也有效 |
| `ctrl+s` | `* [!!]` | 暂存所有文件 | 暂存所有修改的文件 |
| `ctrl+u` | `* [!!]` | 取消暂存所有文件 | 取消暂存所有已暂存的文件 |
| `ctrl+g` | `* [!!]` | 打开作者的 GitHub | 在浏览器中打开作者的 GitHub |
| `ctrl+l` | `* [!!]` | 打开作者的 LinkedIn | 在浏览器中打开作者的 LinkedIn |
| `q` 或 `Q` | `*` | 退出 Gitti | 仅在没有弹出窗口时有效 |
| `?` | `*` | 打开全局键位绑定帮助 | 在弹出窗口中显示所有键位绑定 |

## 组件导航

| 键 | 操作 | 备注 |
| :--- | :--- | :--- |
| `1` | 聚焦本地分支面板 | 将焦点切换到分支列表 |
| `2` | 聚焦修改的文件面板 | 将焦点切换到文件列表 |
| `3` | 聚焦 Stash 面板 | 将焦点切换到 Stash 列表 |
| `tab` | 向前循环浏览组件 | 移动到下一个面板 |
| `shift+tab` | 向后循环浏览组件 | 移动到上一个面板 |

## 列表导航

| 键 | 上下文 | 操作 |
| :--- | :--- | :--- |
| `↑` 或 `k` | 任何列表面板 | 向上移动 / 选择上一项 |
| `↓` 或 `j` | 任何列表面板 | 向下移动 / 选择下一项 |
| `↑` 或 `k` | 弹出窗口选择列表 | 导航到上一个选项 |
| `↓` 或 `j` | 弹出窗口选择列表 | 导航到下一个选项 |

## 详细面板滚动

| 键 | 操作 | 上下文 |
| :--- | :--- | :--- |
| `↑` 或 `k` | 向上滚动 | 在详细组件内 |
| `↓` 或 `j` | 向下滚动 | 在详细组件内 |
| `←` 或 `h` | 向左滚动 | 在详细组件内 |
| `→` 或 `l` | 向右滚动 | 在详细组件内 |

## 本地分支面板

| 键 | 操作 | 场合 |
| :--- | :--- | :--- |
| `n` | 创建新分支 | 打开分支创建流程 |
| `enter` | 切换到选定分支 | 如需要则打开切换分支弹出窗口 |
| `D` | 删除选定分支 | 删除分支（无确认） |
| `r` | 重命名选定分支 | 打开重命名输入弹出窗口 |

## 修改的文件面板

| 键 | 操作 | 场合 |
| :--- | :--- | :--- |
| `space` | 切换暂存/取消暂存 | 在暂存和未暂存之间切换文件 |
| `enter` | 查看文件差异 | 在详细面板中显示差异 |
| `d` | 丢弃更改 | 打开丢弃确认流程 |
| `s` | 暂存选定文件 | 打开 Stash 消息输入弹出窗口 |
| `S` | 暂存所有文件 | 打开 Stash 消息输入弹出窗口 |
| `c` | 提交 | 打开提交弹出窗口 |
| `A` | 修改提交 | 打开修改提交弹出窗口 |

## Stash 面板

| 键 | 操作 | 场合 |
| :--- | :--- | :--- |
| `space` | 应用 Stash | 应用 Stash 但保留在列表中 |
| `backspace` | 弹出 Stash | 应用 Stash 并从列表中删除 |
| `d` | 删除 Stash | 永久删除 Stash |

## 远程操作

| 键 | 操作 | 场合 |
| :--- | :--- | :--- |
| `p` | 推送 | 打开推送流程（远程选择 → 推送选项） |
| `P` | 拉取 | 打开拉取流程（拉取类型选择） |

## 弹出窗口键位绑定

### 文本输入弹出窗口
*适用于：提交、修改提交、添加远程、创建分支、Stash 消息*

| 键 | 操作 | 备注 |
| :--- | :--- | :--- |
| `ctrl+e` | 提交 | 提交表单（用于多行文本区域） |
| `enter` | 提交 | 仅适用于单行输入（分支名称、Stash 消息、远程字段） |
| `esc` | 取消 | 不保存关闭弹出窗口 |
| `tab` | 下一个字段 | 移动到下一个输入字段（如有多个字段） |
| `shift+tab` | 上一个字段 | 移动到上一个输入字段（如有多个字段） |

---

### 选择弹出窗口
*适用于：分支类型、切换类型、推送类型、拉取类型、远程选择、丢弃类型*

| 键 | 操作 | 备注 |
| :--- | :--- | :--- |
| `↑` 或 `k` | 向上导航 | 选择上一个选项 |
| `↓` 或 `j` | 向下导航 | 选择下一个选项 |
| `enter` | 确认选择 | 使用选定选项继续 |
| `esc` | 取消 | 不执行操作关闭弹出窗口 |

---

### 输出/结果弹出窗口
*适用于：推送输出、拉取输出、切换分支输出*

| 键 | 操作 | 备注 |
| :--- | :--- | :--- |
| `esc` | 关闭弹出窗口 | 关闭输出弹出窗口 |

---

### 键位绑定帮助弹出窗口

| 键 | 操作 | 备注 |
| :--- | :--- | :--- |
| `↑` 或 `k` | 向上滚动 | 滚动键位绑定列表 |
| `↓` 或 `j` | 向下滚动 | 滚动键位绑定列表 |
| `esc` | 关闭帮助 | 关闭帮助弹出窗口 |

## 详细视图（右侧面板）

| 键 | 操作 | 备注 |
| :--- | :--- | :--- |
| `esc` | 返回列表 | 退出详细视图，将焦点返回到列表面板 |
| `↑` 或 `k` | 向上滚动 | 向上滚动差异内容 |
| `↓` 或 `j` | 向下滚动 | 向下滚动差异内容 |
| `←` 或 `h` | 向左滚动 | 向左滚动差异内容 |
| `→` 或 `l` | 向右滚动 | 向右滚动差异内容 |

## 总结

- **`* [!!]`** 键位绑定在任何地方都有效，包括在弹出窗口内
- **`*`** 键位绑定全局有效，但在弹出窗口打开时无效
- **特定上下文的键位绑定**仅在其各自的面板中有效
- **弹出窗口键位绑定**取决于弹出窗口类型（文本输入 vs 选择 vs 输出）
- **`esc`**是关闭弹出窗口或退出详细视图的通用方法
